--- a/WebApplication4/Pages/Usuarios/Cadastrar.cshtml
+++ b/WebApplication4/Pages/Usuarios/Cadastrar.cshtml
@@ -7,7 +7,11 @@
 <h2>Cadastrar</h2>
 
 <form>
-    <input type="text" name="usuario.Nome" value="@Model.usuario.Nome"/><br />
-    <input type="password" name="usuario.Senha" /><br />
-    <button>Enviar</button>
+    <div class="form-group">
+        <label for="usuario.Nome">Nome</label>
+        <input type="text" name="usuario.Nome" value="@Model.usuario.Nome" class="form-control" placeholder="Nome" />
+        <label for="usuario.Senha">Senha</label>
+        <input type="password" name="usuario.Senha" class="form-control" placeholder="Senha" />
+        <button class="btn btn-primary">Enviar</button>
+    </div>
 </form>
